<resources>
    <string name="app_name">Bookworm Adventures Deluxe 2</string>
    <string name="description">Description:</string>
    <string name="isbn">ISBN:</string>
    <string name="available">Available</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="borrowed">Borrowed</string>
    <string name="bPending">bPending</string>
    <string name="rPending">rPending</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_contact">Edit Contact Info</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="navbar_text_label_1">My Books</string>
    <string name="navbar_text_label_2">Search</string>
    <string name="navbar_text_label_3">Requests</string>
    <string name="navbar_text_label_4">Profile</string>
    <string name="fab_content_desc">Add Book</string>
    <string name="edit_page_delete_picture_button">Delete Picture</string>
    <string name="my_requests">Lend</string>
    <string name="borrow">Borrow</string>
    <string name="set_location">Set Pickup Location</string>
    <string name="scan_isbn">Scan ISBN</string>
    <string name="my_profile_title">My Profile</string>
    <string name="other_user_profile_title">User Profile</string>
    <string name="profile_object">profile</string>
    <string name="requests_title">Requests</string>
    <string name="search_title">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="describe_the_book">Describe the Book</string>
    <string name="request_detail_requested">Requested by</string>
    <string name="request_detail_borrowed">Borrowed by</string>
    <string name="request_detail_return">Return from</string>
    <string name="exit_confirmation_message">Are you sure you want to exit the app?</string>
    <string name="book_click_source_fragment">source</string>
    <string name="delete_book">Delete</string>

    <!-- Firestore collections -->
    <string name="books_collection">Books</string>
    <string name="users_collection">Users</string>
    <string name="notifications_collection">notifications</string>
    <!-- Firestore keywords -->
    <string name="owner">owner</string>
    <string name="status">status</string>
    <string name="requesters">requesters</string>
    <string name="firestore_title">title</string>
    <string name="firestore_description">description</string>
    <string name="firestore_isbn">isbn</string>
    <string name="firestore_author">author</string>
    <string name="firestore_owner">owner</string>
    <string name="firestore_status">status</string>
    <string name="firestore_pick_up_address">pickUpAddress</string>
    <string name="firestore_requesters">requesters</string>
    <string name="firestore_imageUrl">imageUrl</string>

    <string name="firestore_username">username</string>
    <string name="firestore_email">email</string>
    <string name="firestore_phoneNumber">phoneNumber</string>
    <string name="firestore_userId">userId</string>
    <!-- Firestore notification   -->
    <string name="firestore_user_notification_count_field">notificationCount</string>
    <string name="firestore_user_token_field">token</string>
    <string name="firestore_user_notification_timestamp_field">timestamp</string>
    <string name="firestore_user_notification_bookId_field">bookID</string>
    <string name="firestore_user_notification_message_field">message</string>

    <string name="notification_title">Notifications</string>
    <string name="owned_by">Owned by</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="exchange">Exchange Location:</string>
    <string name="set_location_label">Set Location</string>
    <string name="lend_book">Lend Book</string>
    <string name="wait_borrower">Waiting for Borrower</string>
    <string name="accept_return">Accept Return</string>
    <string name="view_location">View Location</string>
    <string name="scan">Scan</string>
    <string name="return_book">Return Book</string>
    <string name="wait_owner">Waiting for Owner</string>
    <string name="request_book">Request Book</string>
    <string name="view_profile">View Profile</string>
    <string name="cancel_request">Cancel Request</string>

    <!-- Fragment tags -->
    <string name="requests_fragment">requestsFragment</string>
    <string name="search_fragment">searchFragment</string>
    <string name="book_detail_fragment">bookDetailFragment</string>
    <string name="other_profile_fragment">otherUserProfileFragment</string>
    <string name="profile_fragment">profileFragment</string>
    <string name="notification_fragment">notificationFragment</string>
    <string name="my_books_fragment">myBooksFragment</string>
    <string name="filter_menu_fragment">filterMenu</string>

    <!-- Test input strings -->
    <string name="wrong_activity">Wrong Activity</string>
    <string name="space">\u0020</string>
    <string name="wrong_email">wrongemail</string>
    <string name="wrong_pass">wrongpassword</string>
    <string name="short_pass">short</string>
    <string name="short_username">aa</string>
    <string name="invalid_phone1">1</string>
    <string name="invalid_phone2">1-234-456-777</string>
    <string name="invalid_phone3">234-456-777</string>
    <string name="invalid_phone4">123-4567</string>

    <string name="test_create_account_username">createtest</string>
    <string name="test_create_account_email">createtest@gmail.com</string>
    <string name="test_edit_email">testedit@gmail.com</string>
    <string name="test_edit_phone">123-444-5555</string>
    <string name="test_book_title">Test Book</string>
    <string name="test_book_author">Test Author</string>
    <string name="test_book_isbn">1111111111</string>
    <string name="test_book_description">Test Description</string>
    <string name="test_book_edit_title">Test Book Edit</string>
    <string name="test_book_edit_author">Test Author Edit</string>
    <string name="test_book_edit_description">Test Description Edit</string>
    <string name="test_book_edit_isbn">2222222222</string>

    <string name="test_book_available_title">Available Title</string>
    <string name="test_book_available_author">Available Author</string>
    <string name="test_book_available_description">Available Description</string>

    <string name="test_book_accepted_title">Accepted Title</string>
    <string name="test_book_accepted_author">Accepted Author</string>
    <string name="test_book_accepted_description">Accepted Description</string>

    <string name="test_book_requested_title">Requested Title</string>
    <string name="test_book_requested_author">Requested Author</string>
    <string name="test_book_requested_description">Requested Description</string>

    <string name="test_book_borrowed_title">Borrowed Title</string>
    <string name="test_book_borrowed_author">Borrowed Author</string>
    <string name="test_book_borrowed_description">Borrowed Description</string>

    <!-- Map -->
    <string name="map_edit_text_hint">Enter Address, City or Postal Code</string>
    <string name="set_exchange_location">Set Exchange Location</string>
    <string name="view_location_pending_request">Pending Request</string>
    <string name="book_lent">Book lent</string>

    <!--  Notification  -->
    <string name="new_notification_title">1 new notification</string>
    <string name="borrow_request_message">New borrow request from:</string>
    <string name="request_accepted_message">Borrow request accepted by:</string>
    <string name="return_request_message">Return requested by:</string>
    <string name="my_requests_book_confirm_lend_message">Book confirmed to lend by:</string>

    <!--  Book HandOff Messages -->
    <string name="hand_to_borrower">Hand book to borrower</string>
    <string name="book_received">Book received.</string>
    <string name="hand_to_owner">Hand book to owner</string>
    <string name="unsuccessful_scan">Scan was unsuccessful</string>

    <!-- Close Fragment Messages -->
    <string name="request_denied_message">Book request denied</string>
    <string name="request_cancelled_message">Book request cancelled</string>
    <string name="book_deleted_message">Book deleted by owner</string>
    <string name="unavailable_for_edit">Unavailable for edit due to activity</string>

</resources>
