<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/my_books_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/navbar_text_label_1" />

    <item
        android:id="@+id/search_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/navbar_text_label_2" />

    <item
        android:id="@+id/requests_menu_item"
        android:enabled="true"
        android:icon="@drawable/baseline_add_alert_white_18dp"
        android:title="@string/navbar_text_label_3" />

    <item
        android:id="@+id/profile_menu_item"
        android:enabled="true"
        android:icon="@drawable/baseline_person_pin_white_18dp"
        android:title="@string/navbar_text_label_4" />

</menu>